project(HelloWorld)
cmake_minimum_required(VERSION 3.0)

add_executable(CA4 main.cpp customer.cpp account.cpp transaction.cpp bank.cpp)
add_executable(main_test main_test.cpp)
add_executable(ap11_3 ap11_3.cpp)
add_executable(ap11_4_5 ap11_4_5.cpp)
add_executable(ap11_6_7 ap11_6_7.cpp)
add_executable(test test.cpp)
add_executable(ap13_1 ap13_1.cpp)
add_executable(ap14_1_2_3 ap14_1_2_3.cpp)
add_executable(ap14_4_5_6 ap14_4_5_6.cpp)
add_executable(ap14_7 ap14_7.cpp)
add_executable(ap14_8 ap14_8.cpp)
add_executable(ap15_1 ap15_1.cpp)
add_executable(ap15_2_3 ap15_2_3.cpp)
add_executable(ap16 ap16.cpp)
add_executable(ap17_1 ap17_1.cpp)